lab1/Test/L1-A-10-23.output
Error Type A at Line 5
Error Type B at Line 16
Error Type B at Line 33
Error Type B at Line 60
