lab1/Test/L1-A-10-23.cmm
float Sslk ( ) {
  fSi10lYof7M || R_yUmhGKpPsxw != Klpqhr - LbP * - 
    ! tRqt [ TvnvPfVO = Ml92FZOthNeep03sI = MVzBZ7TW5KP 
    && BrsdDWfd3O1Gc > ynR9XdpvRqtsnAxkpP + E15EU70okA4 
    ( wXdmeEZKbv9Ya = J3VQ = \gbAOeX = bwDSTF8k91Ynkha33 
    / ( trc_EfEBf3xKXhNp4Irr = rQn7cEDV1tmkH3dHt = _QUpro3J8qlCE3 
    || KqE8QcksqKX_TSzEwM3Q && YUi29ZAWlUSxq4SNjGq < Q 
    / ! ! - seUqDGQ9PjzWT7t377HO ( bJJInbQORtFhcwgvjWp 
    , _ , lk3pT || E == W5K9U / - ( LYiYioBVzIp_BAF7SV9v 
    && cEqi <= T8X1U ) / ! ! shMNbl / Q3IhKOJ_U - 2145277001.989437926 
    ) ) >= ! 272746386 / - RxmBqEFEOPq9DU33 ( ) ) / xXC4b 
    . TkU8Sy6Mi3w_XV8LVaf ] ;
}
int mBHBiajr5i [ 1558605252 ] 
;
struct dTk79pYjPXfMxGQOoN  ;
int ;
struct Lt5W3E1xruLi RIfNEtsBBI557T6yXa , yA_dCedbNYnfvER2e 

;
int ;
struct {
  int kXBaIxU2r ;
};
struct R ;
int ;
int ;
int f4WiO ( int KqM6PlmmRIf301eyWKqy , int AFXkzo0G_NuVR0Cm 
  ) {
  int kC ;
  int CX9tw ;
  struct Gq6atHTdnkvaOXh84O7E {
    struct jkJ9K0Mnyp8U_d FEYX4Up34iicjT ;== 
    int Gh99G2q2RVcvwrSI ;
  }MMhY ;
  int pTRjzOu3LjGPH55LD7LP , s4q3z9 = RsCrfutmhyjLi9BXr 
    ;
  xlWGzANxKyy8zT9y86yz ;
  if ( Z63 )   if ( VblkPUi7DH8ZTBDV )   if ( VM7a 
    )   GzDwak_vNr9yQEYAon ;
else   TorfYDaeVLb4fsdTZ1b0 ;

else   GlCaAdgKoEGcYOE ;

else   if ( CB )   if ( K6kO8cLtg1Z )   if ( xVSowWhDmTq 
    ) {
    if ( sY )     while ( RymtKuTxI4k )     if ( ZDKKY 
      )     Uf1aMJ3QiaRrx ;
else     sHReQFiVjQxGOOCffW ;



    if ( uIn6VTFkvhKDSxj4yod )     return FpiS6uc 
      ;

  }



!= }
